--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <script type="text/javascript" src="functionality.js" defer></script>
     <body>
+        <h1> Welcome </h1>
         <div id="res_container"></div>
         <div id="canvas"></div>
         <div id="main">
