--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script type="text/javascript" src="functionality.js" defer></script>
-    <body>
-        <h1> Welcome </h1>
+    <body style=" margin-right: auto; margin-left: auto; width:fit-content ">
         <div id="res_container"></div>
         <div id="canvas"></div>
         <div id="main">
@@ -10,7 +9,7 @@
         </div>     
         <div id="top" style="padding-bottom: 20px;">
             <div id='op1' style="display:none;">
-                size(diag) in inches # <input type="text" id="size" ><br>
+                size(diag) # <input type="text" id="size" ><br>
                 <button onclick="size2dpi()">Calculate DPI</button>
                 </div>
             <div id='op2' style="display:none;">
