--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <h1> Hello World </h1>
 <script type="text/javascript" src="functionality.js" defer></script>
     <body style=" margin-right: auto; margin-left: auto; width:fit-content ">
         <div id="res_container"></div>
