--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <h1> Hello World </h1>
 <script type="text/javascript" src="functionality.js" defer></script>
-    <body style=" margin-right: auto; margin-left: auto; width:fit-content ">
-        <div id="res_container"></div>
+    <body >
+        <h1>Hello World!!!</h1>
+        <div id="content-container" style="margin:auto; height:fit-content; width:max-content; position: fixed; top:-40%; bottom:0; left:0; right:0; font-size:1.5em;">
+        <div id="res_container" ></div>
         <div id="canvas"></div>
-        <div id="main">
+        <div id="main" style="padding-bottom: 20px;">
             ----
-        </div>     
-        <div id="top" style="padding-bottom: 20px;">
-            <div id='op1' style="display:none;">
+        </div>
+        <button onclick="show('op1')" id='op1button' style="display:none;">Size to DPI</button>
+        <button onclick="show('op2')" id='op2button'>DPI to Size</button>   
+        </div>
+          
+        <div id="top">
+            <div id='op1' style="display:none;" >
                 size(diag) # <input type="text" id="size" ><br>
-                <button onclick="size2dpi()">Calculate DPI</button>
+                <button onclick="size2dpi()" >Calculate DPI</button>
                 </div>
-            <div id='op2' style="display:none;">
-                dpi # <input type="text" id="dpi" ><br>
-                <button onclick="dpi2size()">Calculate Size</button>
+            <div id='op2' style="display:none;" >
+                dpi # <input type="text" id="dpi"><br>
+                <button onclick="dpi2size()" >Calculate Size</button>
             </div>
         </div>
-            <button onclick="show('op1')" id='op1button' style="display:none;">Size to DPI</button>
-            <button onclick="show('op2')" id='op2button'>DPI to Size</button>
+            
     </body>
 </html>
+
