--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 ----
             </div>
             <div id="output" style="position: relative;">
-                <b id="result_text" style="position: absolute; top: 50%; left: 50%; margin: -25px 0 0 -25px;"></b>
+                <b id="result_text" style="position: absolute; top: 50%; left: 50%; margin: -25px 0 0 -25px;vertical-align: middle; "></b>
             </div>
-            
+            <br>
             <button onclick="show('op1')" id='op1button' style="display:none;">Size to DPI</button>
             <button onclick="show('op2')" id='op2button'>DPI to Size</button>   
         </div>
@@ -37,5 +37,4 @@
         </div>
     </body>
 </html>
-
 
