--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body >
         
         <div id="content-container" style="margin:auto; height:fit-content; width:max-content; position: fixed; top:-30%; bottom:0; left:0; right:0; font-size:1.5em;">
-            <h1>Hello World!!!</h1>
+            <strong>Know your DPI<strong><br>
+            <em>Site under development</em>
             <div id="res_container" ></div>
             <div id="main" style="padding-bottom: 20px;">
                 ----
