--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 <script type="text/javascript" src="functionality.js" defer></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="style.css">
 </head>
