--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
 <script type="text/javascript" src="functionality.js" defer></script>
+<meta name="viewport" content="width=1280, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
 
