--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html >
 <head>
 <script type="text/javascript" src="functionality.js" defer></script>
-<meta name="viewport" content="width=1280, initial-scale=1">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap-responsive.css">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
 
-    <body >
+    <body class="jumbotron" >
+     
         <footer>
-            <p>&copy;2022 <em>noobie <em>(Site under development. For enquiry/suggestion or for contributing please drop a mail to <a href = "mailto: screendpi.info@gmail.com">screendpi.info@gmail.com</a>)</em></em></p>
+            <p>&copy;<em>noobie <em>(Site under development. For enquiry/suggestion or for contributing please drop a mail to <a href = "mailto: screendpi.info@gmail.com">screendpi.info@gmail.com</a>)</em></em></p><br>
             <div class="caution">
                 <strong>Note!</strong> For accurate results, zoom level must be set to 100% in your browser. All information in the Service is provided &quot;as is&quot;, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability and fitness for a particular purpose.<br>We will not be liable to You or anyone else for any decision made or action taken in reliance on the information given by the Service or for any consequential, special or similar damages, even if advised of the possibility of such damages.
               </div>
@@ -18,7 +22,7 @@
 
             <b id='first_run'>Resolution is : </b>
             <div id="res_container" > <input type="text" id="width_value" oninput="resolution();"> x <input type="text" id="length_value" oninput="resolution();"></div>
-            <div id="box-border" style="border: 0.4px solid; padding: 20px 50px 20px 50px; margin:20px;">
+            <div id="box-border" style="border: 0.4px solid; padding: 20px 50px 20px 50px; margin:20px 0 20px 0;">
             <div id="main" style="padding-bottom: 20px;">
                 ----
             </div>
@@ -38,7 +42,7 @@
             </div>
             
             <div id="output" style="position: relative;">
-                <b id="result_text" style="position: absolute; top:20%;  width:100%; text-align: center; font-weight: bold; font-style: italic;"></b>
+                <b id="result_text" style="position: absolute; top:30%;  width:100%; text-align: center; font-weight: bold; font-style: italic;"></b>
 
             </div>
             </div>
@@ -50,3 +54,6 @@
     </body>
  
 </html>
+
+
+
