--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
-    <body >
+    <body class="d-flex flex-column min-vh-100">
      
-        <footer>
+        <footer class="mt-auto">
             <p>&copy;<em>noobie <em>(Site under development. For enquiry/suggestion or for contributing please drop a mail to <a href = "mailto: screendpi.info@gmail.com">screendpi.info@gmail.com</a>)</em></em></p><br>
             <div class="caution">
                 <strong>Note!</strong> For accurate results, zoom level must be set to 100% in your browser. All information in the Service is provided &quot;as is&quot;, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability and fitness for a particular purpose.<br>We will not be liable to You or anyone else for any decision made or action taken in reliance on the information given by the Service or for any consequential, special or similar damages, even if advised of the possibility of such damages.
               </div>
         </footer>
-        <div id="content-container" style="margin:auto; height:fit-content; width:max-content; position: fixed; top:-20%; bottom:0; left:0; right:0; font-size:1.5em;">
+        <div id="content-container" class="col-md-4 col-sm-6" style="margin:auto; height:fit-content; width:max-content; position: fixed; top:-20%; bottom:0; left:0; right:0; font-size:1.5em;">
             <strong><u>Know your DPI</u><strong><br><br>
 
             <b id='first_run'>Resolution is : </b>
