--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
-    <body class="d-flex flex-column min-vh-100">
+    <body class="d-flex flex-column max-vh-100">
      
         <footer class="mt-auto">
             <p>&copy;<em>noobie <em>(Site under development. For enquiry/suggestion or for contributing please drop a mail to <a href = "mailto: screendpi.info@gmail.com">screendpi.info@gmail.com</a>)</em></em></p><br>
