--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="functionality.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+<!--   <link rel="stylesheet" href="style.css"> -->
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
