--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
     </div> -->
-    <div class="col-sm-12 text-center"> 
+    <div class="col-md-6 col-sm-12 text-center"> 
         <br><br>
               
             <b id='first_run'>Resolution is : </b>
@@ -92,7 +92,7 @@
                 ----
             </div>
 
-            <div id="top" class="col-sm-8 text-center">
+            <div id="top" class="col-md-4 col-sm-8 text-center">
                 <div id='op1' style="display:none;" >Size:
                     <select id = "myList" class='sameLine' onchange = "size2dpi();" >  <!--can be made hoverable-->
                         <option> Diagonal </option>  
