--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     
     /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen{
+    @media screen and (max-width: 767px){
       .sidenav {
         height: auto;
         padding: 15px;
