--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     
     /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 900px){
+    @media only screen and (max-width: 767px) and (min-device-width: 375px)and (-webkit-min-device-pixel-ratio: 2){
       .sidenav {
         height: auto;
         padding: 15px;
